CHORE: add examples for query params
